chore(release): prepare v0.6.10
Advance the building-palette milestone after the full build passes in 2m19s:
624 tests across 95 classes with zero failures, errors or skips, JavaDoc doclint
and unchanged line budgets. Version and ReleaseVersionTest advance together, and
the changelog gains the 0.6.10 entry.

The plan records the per-block audit in full: the nineteen included blocks with
what makes each inert, and the twelve excluded ones with the state that keeps
them unbuildable. It also records every performance budget passing, Creative and
Survival 30-second smokes with 110/110 item icons and zero GL, KHR and OpenAL
errors, and three inspected captures showing the thirty-entry Building tab and
the search view clear of clipping at 1280x720 and 1920x1080.

Two honest corrections. Old-reader compatibility was measured against a compiled
v0.6.0 worktree instead of assumed: such a save loads, silently dropping palette
stacks while placed blocks survive, so the design document's "clean load
failure" is replaced by the measurement. And these gates ran on a Linux host,
where build.gradle refuses to configure and gradlew run is unavailable; the
workaround and its consequences for the final v0.7.0 gates are written down.
Human judgement of palette ergonomics and icon legibility in play is unverified.